--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ packages = [
 python = "^3.11"
 typer = "^0.9.0"
 rich = "^13.7.1"
-advent-of-code-data = "^2.0.1"
+flit-core = "^3.9.0"
+advent-of-code-data = "1.3.2"
 
 
 [build-system]
